--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.5",
+    "react-to-print": "^2.14.4",
+    "react-web-share": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
